--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "url": "https://github.com/htmlacademy-javascript/772513-code-and-magick-18/issues"
   },
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "eslint": "6.3.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "gulp": "^4.0.2"
   },
   "license": "MIT",
   "dependencies": {},
